--- a/.github/workflows/image.yaml
+++ b/.github/workflows/image.yaml
@@ -19,18 +19,18 @@ jobs:
         id: prepare
         run: |
           DOCKER_IMAGE=swyytch/ddclient
-          DOCKER_PLATFORMS=linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
+          DOCKER_PLATFORMS=linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le  
           TAGS="--tag ${DOCKER_IMAGE}:latest"
           TAGS="$TAGS --tag ${DOCKER_IMAGE}:$(git rev-parse --short @:./ddclient)"
           echo ::set-output name=docker_image::${DOCKER_IMAGE}
           echo ::set-output name=buildx_args::--platform ${DOCKER_PLATFORMS} \
             $TAGS --file ./Dockerfile ./
-      - name: install buildx
-        id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v3
-        with:
-          buildx-version: latest
-          qemu-version: latest
+      # https://github.com/docker/setup-qemu-action
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      # https://github.com/docker/setup-buildx-action
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       - name: Docker Buildx (build)
         run: |
