--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -14,6 +14,15 @@ updates:
     assignees:
       - rtrox
  
+  - package-ecosystem: "docker"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    assignees:
+      - rtrox
+    reviewers:
+      - rtrox
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
